--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,11 @@ deploy:
   type: git   
   repo: https://github.com/ChuckieWill/ChuckieWill.github.io.git 
   branch: master 
+
+
+
+excerpt:
+depth: 5
+excerpt_excludes: []
+more_excludes: []
+hideWholePostExcerpts: true
