--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Chuckie's Blog
 subtitle: ''
-description: '技术博客,前端知识'
+description: 'Bright future'
 keywords: 软件，技术，前端
 author: Chuckie
 language: zh-CN
